# rremind

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo_template.toml  Johnson  README.md  build.off  build.sh  build1.sh  build2_release.sh  build3_after_release.sh  manpage.md  manpage_template.md
src/: main.rs
src/color/: mod.rs
src/parser/: mod.rs
src/utils/: mod.rs
