[package]
name = "rremind"
version = "0.0.7"
edition = "2021"
description = "A simple reminder service inspired by Diane Skoll's 'remind'"
categories = ["command-line-utilities"]
keywords = ["cli", "calendar", "remind"]
license = "GPL-3.0-only"
repository = "https://github.com/Jakubzik/rremind"
homepage = "https://github.com/Jakubzik/rremind"
authors = ["Heiko Jakubzik <heiko.jakubzik@shj-online.de>"]
readme = "README.md"

[dependencies]
chrono = "0.4.38"

